# svm-burns

./: Cargo.toml  README.md
benches/: linear_benchmark.rs  rbf_benchmark.rs  svm_benchmark.rs
src/: cache.rs  lib.rs  optimizer.rs  parameters.rs  smartcore_optimizer.rs  smo.rs  support_vector.rs  svc.rs  svm.rs
src/kernel/: linear.rs  mod.rs  rbf.rs
