[package]
name = "svm-burns"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
smartcore = { version = "0.3" }

[[bench]]
name = "rbf_benchmark"
harness = false

[[bench]]
name = "linear_benchmark"
harness = false

[[bench]]
name = "svm_benchmark"
harness = false
