[package]
name = "svm-burns"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
rand = "0.8.5"
rayon = { version = "1.8.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.11", features = ["js"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
smartcore = { version = "0.3" }

[[bench]]
name = "rbf_benchmark"
harness = false

[[bench]]
name = "linear_benchmark"
harness = false

[[bench]]
name = "svm_benchmark"
harness = false
